--- a/FN_ArcReactor/AndroidManifest.xml
+++ b/FN_ArcReactor/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dev.blacksheep.fn.orangeblack"
+    package="dev.blacksheep.fn.arcreactor"
     android:versionCode="1"
-    android:versionName="1.1" >
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -12,7 +12,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <receiver android:name="OrangeandBlack" >
+        <receiver android:name="Holo" >
             <intent-filter>
                 <action android:name="robj.floating.notifications.THEME" />
             </intent-filter>
